fix audio passage name

--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ You did your best to stand on the same spot and hold the boulder close.
 The spinning eventually stopped. (set:$mad to 1)]
 You need to [[refocus-&gt;Push]].
 (set: $focus to $focus+(random: -$boons, $boons)*$potency)
-(set:$boons to $boons+1)</tw-passagedata><tw-passagedata pid="36" name="tracks" tags="hal.tracks" position="1150,475" size="100,100">* thump: ./audio/thump.wav 
+(set:$boons to $boons+1)</tw-passagedata><tw-passagedata pid="36" name="hal.tracks" tags="hal.tracks" position="1150,475" size="100,100">* thump: ./audio/thump.wav 
 * hestia: ./audio/hestia.wav 
 * hades: ./audio/hades.wav 
 * zeus: ./audio/zeus.wav 
